--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "nodemailer": "^7.0.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
@@ -21,6 +22,7 @@
     "@types/express": "^5.0.2",
     "@types/express-session": "^1.18.1",
     "@types/node": "^22.15.3",
+    "@types/nodemailer": "^6.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
