--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/connect-sqlite3": "^0.9.5",
     "@types/express": "^5.0.2",
+    "@types/express-ejs-layouts": "^2.5.4",
     "@types/express-session": "^1.18.2",
     "@types/node": "^22.15.3",
     "@types/nodemailer": "^6.4.17",
