--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "connect-sqlite3": "^0.9.15",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/connect-sqlite3": "^0.9.5",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.2",
     "@types/express-ejs-layouts": "^2.5.4",
     "@types/express-session": "^1.18.2",
